0.4.8 (??/??/2012):
-------------------

- Added "--usedefault {devicename}" and "--drivers" options to the
  install.sh script and changed the "esp" option to "--esp". 

0.4.7 (11/6/2012):
------------------

- Added an icon for gummiboot.

- Added a boot option editor: Pressing the Insert or F2 key from a boot
  tag's options menu opens a simple text-mode line editor on which the boot
  options may be edited for a one-time boot with altered options.

- Modified the "scan_delay" feature to delay and then perform a re-scan,
  which may work better than the first attempt at this feature (which I'm
  told isn't working as planned).

- Modified rEFInd to add a space after the command-line options only when
  launching Mac OS X. On some early Macs, the extra space (which had been
  present by default, as a carryover from rEFIt) causes problems when
  booting Linux kernels from FAT partitions.

0.4.6 (10/6/2012):
------------------

- Fixed some minor memory management issues.

- Added new "scan_delay" feature to impose a delay before scanning
  for disks.

- Changed default "scanfor" option from internal-external-optical to either
  internal-external-optical-manual (for non-Macs) or
  internal-hdbios-external-biosexternal-optical-cd-manual (for Macs). I've
  done this for two reasons:
  - Many Mac users have been confused by the fact that rEFInd needs
    reconfiguration to detect Windows (or Linux installed in BIOS mode),
    since rEFIt scans BIOS devices by default. Adding the BIOS options as
    default for them should help them.
  - Adding the "manual" option enables users to simply add manual boot
    stanzas and have them work, which is more intuitive. Adding the
    "manual" option will have no effect unless manual stanzas are created
    or uncommented, so this part of the change won't affect users' working
    default configurations.

- Added new legacy (BIOS) boot support for UEFI-based PCs.

0.4.5 (8/12/2012):
------------------
